fix(contest/ui): append visibility attribute to dropdowns with hover

--- a/cms/server/contest/static/cws_style.css
+++ b/cms/server/contest/static/cws_style.css
@@ -1012,12 +1012,14 @@ td.token_rules p:last-child {
 
 .dropdown.hover .dropdown-menu {
     display: block;
+    visibility: hidden;
     opacity: 0;
     transition: all 0.4s ease;
 }
 
 .dropdown.hover:hover .dropdown-menu {
     display: block;
+    visibility: visible;
     opacity: 1;
 }
 
